# mapFolding

./: .editorconfig  .gitattributes  .gitignore  .isort.cfg  CITATION.cff  Colab.ipynb  README.md  SECURITY.md  Z0Z_dataAnalysis.py  Z0Z_do.py  Z0Z_getMapFoldings.py  Z0Z_speed.py  Z0Z_speedTest.py  Z0Z_zoomZoom.py  aOFn.ipynb  codon-find-python-library.py  context7.json  foldings.AA  foldings.txt  mapFolding.code-workspace  mapFolding.py  p2x2x2x2x2x2.foldsTotal  p2x2x2x2x2x2x2.foldsTotal  pyproject.toml  pyrightconfig.json  requirements.py  requirements.txt  ruff.toml  ty.toml
.cache/: A001415.txt  A001417.txt  A001418.txt  b001415.txt
.github/: CaseStudy_PatternDiscoveryAndGeneralization.instructions.md  FUNDING.yml  HH-docstrings.md  HH-formatting.md  HH-status-messages.md
.github/instructions/: CaseStudy_PatternDiscoveryAndGeneralization.instructions.md  new-algorithm.instructions.md  pandas.instructions.md  post defensive.instructions.md
.github/workflows/: bandit.yml  codecovUpload.yml  create-release.yml  githubRelease.yml  pypiRelease.yml  pyre.yml  python-publish.yml  pythonTests.yml  unittests.yml  updateCitation.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md  testing.md
citations/: CITATION.cff  ClisbyJensen2012.bib  Howroyd.bib  Jensen.bib  Jia2020.bib  Koehler1968.bib  Legendre2014.bib  Lunnon.bibtex  Lunnon1968.bib  Sawada2012.bib  Wu.bib  oeis.bib
easyRun/: A000682.py  NOTcountingFolds.py  __init__.py  countFolds.py  eliminateFolds.py  entropyAnalysis.py  generateAllModules.py  meanders.py  pinning.py
mapFolding/: Z0Z_dictionary_oeisMeanders.py  Z0Z_flowControl.py  _A007822.py  __fucking_idiotic_system__.py  __idiotic_system__.py  __init__.py  __main__.py  _semiotics.py  _theSSOT.py  _theTypes.py  aOFnTests.ipynb  babbage.py  basecamp.py  baseline.py  beDRY.py  clearOEIScache.py  colab1.py  colab2.py  count.py  countInitialize.py  countParallel.py  countSequential.py  daoOfMapFolding.py  dataBaskets.py  datatypes.py  dispatcherNumba.py  distributionCenter.py  filesystem.py  filesystemToolkit.py  generatedSequential.py  genericNeedsNewHome.py  guyuygvyibiu.ipynb  importPackages.py  importSelector.py  infoBooth.py  inlineAfunction.py  job, tasks, sum.ipynb  kitFilesystem.py  lego.py  lola.py  (+52 more)
mapFolding/.cache/: A000136.txt  A000560.txt  A000682.txt  A001010.txt  A001011.txt  A001415.txt  A001416.txt  A001417.txt  A001418.txt  A005315.txt  A005316.txt  A007822.txt  A077460.txt  A078591.txt  A086345.txt  A178961.txt  A195646.txt  A223094.txt  A259689.txt  A259702.txt  A260785.txt  A301620.txt  b000682.txt  b001010.txt  b001011.txt  b001415.txt  b005315.txt  b005316.txt  b077460.txt  b086345.txt  b259689.txt  b260785.txt
mapFolding/JAX/: lunnanJAX.py  taskJAX.py
mapFolding/RunLolaRun/: __init__.py  job, tasks, test.ipynb  lolaDoJob.py  lolaDoTask.py  lolaGenerateJob.py
mapFolding/_e/: Elimination.md  Z0Z_patternFinder.py  _2上nDimensionalBeDRY.py  _2上nDimensionalConditionalOrdering.py  _2上nDimensionalCreases.py  _2上nDimensionalLeafDomains.py  _2上nDimensionalLeafOptions.py  _2上nDimensionalMeasure.py  _2上nDimensionalSemiotics.py  __init__.py  _beDRY.py  _creases.py  _data.py  _dataDynamic.py  _development.py  _disaggregation.py  _exclusions.py  _leafDomains.py  _leafOptionsAtPile.py  _measure.py  _pileRanges.py  _semiotics.py  _standardize.md  _theTypes.py  _wishlist.md  basecamp.py  bureaucracy.py  dataBaskets.py  dataDynamic.py  elimination.py  eliminationAddend.py  eliminationCount.py  eliminationCrease.py  filters.py  knowledgeDump.py  leafDomains.py  patternFinder.py  pileOptions.py  pin2上nDimensional.py  pin2上nDimensionalAnnex.py  (+12 more)
mapFolding/_oeisFormulas/: A000682.py  A000682NumPy.py  A005316.py  Z0Z_aOFn.py  Z0Z_new64.py  Z0Z_notes.py  Z0Z_notesMeanders.py  Z0Z_oeisMeanders.py  Z0Z_symmetry.py  Z0Z_test_oeisMeanders.py  developing_aggregate.ipynb  estimatingMemoryNeeds.txt  listArrayCurveLocationsAnalyzed.pkl  matrixMeanders.py  matrixMeanders64.py  matrixMeandersMimic.py  matrixMeandersSimple.py  memory_estimation_analysis.ipynb  oeisIDbyFormula.py
mapFolding/algorithms/: A000136constraintPropagation.py  A000136elimination.py  A086345.py  constraintPropagation.py  daoOfMapFolding.py  elimination.py  eliminationCount.py  eliminationParallel.py  getBucketsTotal.py  iff.py  matrixArrow.py  matrixMeanders.py  matrixMeandersBeDry.py  matrixMeandersNumPy.py  matrixMeandersNumPyndas.py  matrixMeandersPandas.py  mmPandas.py  oeisIDbyFormula.py  patternFinder.py  pinning2Dn.py  ruff.toml  symmetricFolds.py  zCuzDocStoopidoeisIDbyFormula.py
mapFolding/benchmarks/: __init__.py  analyze_benchmarks.ipynb  benchmarking.py  core.py  test_benchmarks.py
mapFolding/citations/: CITATION.cff  Physics_for_the_Birds.bibtex  jOEIS.bibtex  updateCitation.py
mapFolding/cupy/: cupyMakesMeCry.py
mapFolding/mapFolding/: __init__.pyi  basecamp.pyi  beDRY.pyi  filesystem.pyi  noHomeYet.pyi  oeis.pyi  theConfiguration.pyi  theDao.pyi  theSSOT.pyi  theSSOTdatatypes.pyi  theWrongWay.pyi
mapFolding/oeis/: __init__.py  __main__.py  _commandLine.py  _dataBaskets.py  _metadata.py  _needsAHome.py  _probablyNotOEIS.py  _theSSOT.py  oeisIDbyFormula.py
mapFolding/reference/: A000682.csv  A000682.tab  A000682_28_39.csv  A000682_peak_analysis.ipynb  A000682bridges.tab  A000682curveLocations.tab  A000682facts.py  A005316.tab  A005316bridges.tab  A005316curveLocations.tab  A005316facts.py  A086345Wu.py  Speed highlights.md  flattened.py  (+19 more)
oeis/: A000000.txt  A001415.txt  A001416.txt  A001417.txt  A001418.txt  A195646.txt  A999999.txt
tests/: __init__.py  conftest.py  conftest_tmpRegistry.py  conftest_uniformTests.py  test_benchmark.py  test_benchmarks.py  test_clearOEIScache.py  test_computations.py  test_filesystem.py  test_foldings.py  test_makeJob.py  test_mdmf.py  test_oeis.py  test_other.py  test_prepareParameters.py  test_stoo_babbage.py  test_synthesizeNumba.py  test_tasks.py  test_temporary.py  to feel better.ipynb  utilitiesForTests.py
unittests/: test_mapFolding.py  test_oeis.py
(+1102 files in other folders)
