[project]
name = "mapFolding"
version = "0.17.1"
description = "Map folding, meanders, stamp folding, semi-meanders. Experiment with algorithm transformations, and analyze computational states."
readme = "README.md"
requires-python = ">=3.12"
license = { 'text' = "CC-BY-NC-4.0" }
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "A001415",
  "A001417",
  "arch configurations",
  "AST manipulation",
  "closed meandric numbers",
  "combinatorial geometry",
  "combinatorial mathematics",
  "combinatorics",
  "computational combinatorics",
  "computational geometry",
  "crossing patterns",
  "curve crossings",
  "discrete mathematics",
  "folding pattern enumeration",
  "folding problems",
  "integer sequences",
  "labeled stamp folding",
  "map folding",
  "mapFolding",
  "meander enumeration",
  "meanders",
  "meandric systems",
  "OEIS",
  "open meandric systems",
  "paper folding mathematics",
  "semi-meanders",
  "stamp folding",
  "symbolic computation",
  "symmetric foldings",
  "topological combinatorics",
  "topological patterns",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Pre-processors",
  "Typing :: Typed",
]
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/mapFolding", Issues = "https://github.com/hunterhogan/mapFolding/issues", Repository = "https://github.com/hunterhogan/mapFolding.git" }
scripts = { OEIS_for_n = "mapFolding.oeis:OEIS_for_n", getOEISids = "mapFolding.oeis:getOEISids" }
dependencies = [
  "astToolkit>=0.9.0",
  "cytoolz",
  "cytoolz-stubs",
  "gmpy2",
  "hunterMakesPy>=0.3.0",
  "more_itertools",
  "numpy",
  "platformdirs",
]
optional-dependencies = { development = [
  "gmpy2-stubs",
  "ipykernel",
  "ipywidgets",
  "memray; sys_platform == 'linux'",
  "py-spy",
  "pyarrow-stubs",
  "setuptools-scm",
], numba = [
  "numba",
  "numba_progress",
], pandas = [
  "ortools",
  "pandas",
  "pyarrow",
], sympy = [
  "sympy",
], testing = [
  "numba",
  "ortools",
  "pandas",
  "pyarrow",
  "pytest-cov",
  "pytest-env",
  "pytest-xdist",
  "pytest",
  "sympy",
] }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage]
report = { exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == \"__main__\":",
  "numba.jit_module",
], ignore_errors = false }
run = { branch = true, concurrency = [
  "multiprocessing",
], data_file = "tests/coverage/.coverage", omit = [
  "easyRun/**",
  "getLLVMforNoReason.py",
  "mapFolding/reference/*",
  "mapFolding/tests/*",
  "zCuzDocStoopid*.py",
  "Z0Z_*",
], parallel = true, source = [
  ".",
] }

[tool.pytest]
addopts = ["--color=auto", "-n 4"]
log_auto_indent = "On"
testpaths = ["mapFolding/tests"]

[tool.pytest_env]
# NUMBA_JIT_COVERAGE = "1" # This does not work, whether it is 0 or 1.
# NUMBA_DISABLE_JIT = "1"

[tool.setuptools]
package-data = { "*" = ["py.typed"] }
packages = { find = {  } }

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"

[tool.uv.sources]
cytoolz-stubs = { git = "https://github.com/OutSquareCapital/cytoolz-stubs.git" }
