[project]
name = "mapFolding"
version = "0.22.0"
description = "Map folding, meanders, stamp folding, semi-meanders. Experiment with algorithm transformations, and analyze computational states."
readme = "README.md"
requires-python = ">=3.13"
license = "CC-BY-NC-4.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
maintainers = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "A001415",
  "A001417",
  "OEIS",
  "combinatorial geometry",
  "combinatorics",
  "computational combinatorics",
  "computational geometry",
  "map folding",
  "meanders",
  "stamp folding",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]
scripts = { OEIS_for_n = "mapFolding.oeis:OEIS_for_n", getOEISids = "mapFolding.oeis:getOEISids" }
dependencies = [
  "Z0Z_tools>=2.2.3",
  "astToolkit>=0.11.0",
  "gmpy2",
  "hunterMakesPy>=0.7.3",
  "more_itertools",
  "numpy",
  "platformdirs",
  "tqdm",
  "urllib3",
]
optional-dependencies = { development = [
  "gmpy2-stubs",
  "ipykernel",
  "ipywidgets",
  "memray; sys_platform == 'linux'",
  "py-spy",
  "pyarrow-stubs",
  "pytest-cov",
  "setuptools"
], numba = ["numba", "numba_progress"], ortools = ["ortools"], pandas = [
  "pandas",
  "pyarrow"
], sympy = ["sympy"], testing = [
  "numba",
  "ortools",
  "pandas",
  "pyarrow",
  "pytest-env",
  "pytest-xdist",
  "pytest",
  "sympy"
] }

[project.urls]
Context7 = "https://context7.com/hunterhogan/mapfolding"
Donate = "https://www.patreon.com/integrated"
Download = "https://pypi.org/project/mapFolding"
Homepage = "https://github.com/hunterhogan/mapFolding"
Issues = "https://github.com/hunterhogan/mapFolding/issues"
Repository = "https://github.com/hunterhogan/mapFolding.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage]
report = { exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == \"__main__\":",
  "numba.jit_module"
], ignore_errors = false }
run = { branch = true, concurrency = ["multiprocessing"], data_file = "mapFolding/tests/coverage/.coverage", omit = [
  "**/easyRun/**",
  "**/tests/*",
  "getLLVMforNoReason.py",
  "mapFolding/algorithms/symmetricFolds.py",
  "mapFolding/reference/*",
  "Z0Z_*",
  "zCuzDocStoopid*.py",
], parallel = true, source = ["."] }

[tool.pytest]
addopts = ["--color=auto", "-n 5"]
log_auto_indent = "On"
testpaths = ["**/tests"]

[tool.pytest_env]
# https://github.com/hunterhogan/mapFolding/issues/20
# Re-confirmed: numba Version: 0.63.1 2025 December 30
# NUMBA_JIT_COVERAGE = "1" # This does not work, whether it is 0 or 1.
# NUMBA_DISABLE_JIT = "1" # This is the only way to get coverage data

[tool.setuptools]
package-data = { "*" = ["py.typed"] }
packages = { find = {} }

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"
